--- a/public/frontand/assets/css/custom.css
+++ b/public/frontand/assets/css/custom.css
@@ -1697,3 +1697,6 @@ body[dir="rtl"] .recent-thumb-link {
 .blog-box .blog-img11 {
     height: 300px !important;
 }
+.widget_title22 {
+    margin-top: 40px !important;
+}
