--- a/public/frontand/assets/css/custom.css
+++ b/public/frontand/assets/css/custom.css
@@ -1467,6 +1467,11 @@ body[dir="rtl"] .recent-thumb-link {
         gap: 10px;
         padding: 10px 6px;
     }
+    .audio-play-wrapp audio {
+        border: unset;
+        width: 100%;
+        height: 40px;
+    }
 }
 .th-btn11:hover {
     color: #121010 !important;
