--- a/public/frontand/assets/css/custom.css
+++ b/public/frontand/assets/css/custom.css
@@ -252,7 +252,7 @@
 .audio-play-wrapp audio {
     border: unset;
     width: 100%;
-    height: 100%;
+    height: 40px;
 }
 .background_color {
     background: #f8f9fa !important;
