--- a/public/frontand/assets/css/custom.css
+++ b/public/frontand/assets/css/custom.css
@@ -1705,3 +1705,8 @@ body[dir="rtl"] .recent-thumb-link {
 .widget_title22 {
     margin-top: 40px !important;
 }
+.audio-play-wrapp audio {
+    border: unset;
+    width: 100%;
+    height: 40px !important;
+}
